--- a/analysis/cleaning_data.Rmd
+++ b/analysis/cleaning_data.Rmd
@@ -45,8 +45,6 @@ med <- read.csv(file=paste(di, "/data/med.txt", sep= ""),
               header = TRUE,
               sep = '\t')
 
-
-
 rawdf <- rbind(bioCI, bioP, med, wos1, wos2, zoo)
 ```
 
@@ -58,5 +56,69 @@ First we want to create a table with the authors and the corresponding author.
 
 ```{r}
 d <- rawdf[, c("Authors..Primary", "Author.Address")]
+names(d) <- c("authors", "address")
+
+library("stringr") # String manipulation
+library("dplyr")
+library("tidyr")
+
+# Option 1. Get a colum with all authors 
+all_authors <- as.data.frame(unlist(stringr::str_split(d$authors, pattern = ";")))
+names(all_authors)[1] <- 'author'
+
+# Option 2. Dataframe with one auhtor per colum 
+# Determine the max number of columns based on ";"
+max_columnas <- max(stringr::str_count(d$authors, pattern=";"))
+
+# Create vector with columns name
+vec_columnas <- paste0("a", 1:(max_columnas + 1))
+
+all_authors_colum <- tidyr::separate(d, authors, into=vec_columnas, extra="merge", sep=";")
+
+#### Create a dataframe with unique authors
+all_authors_clean <- as.data.frame(stringr::str_replace_all(all_authors$author, pattern = ",", replacement = " "))
+all_authors_clean <- unique(all_authors_clean)
+names(all_authors_clean)[1] <- 'author'
+# Export unique dataframe authors
+write.csv(all_authors_clean, file=paste(di, "/data/output/lista_author_wos.csv", sep=""), row.names = FALSE)
 
 ```
+
+```{r}
+# Matching e-mail address 
+# via Gaston Sanchez http://gastonsanchez.com/Handling_and_Processing_Strings_in_R.pdf 
+
+
+# Create a varible (binari) indicating if there is email adress in the Address Field
+d$email_yes <- stringr::str_count(d$address, pattern="@")
+
+# How many records has email address? 
+sum(d$email_yes, na.rm = TRUE)
+
+# 
+
+# Define a pattern for email 
+# From http://stackoverflow.com/questions/25076575/how-to-extract-expression-matching-an-email-address-in-a-text-file-using-r-or-co 
+# See also http://regexper.com/ 
+email_pattern <- "([_a-z0-9-]+(\\.[_a-z0-9-]+)*@[a-z0-9-]+(\\.[a-z0-9-]+)*(\\.[a-z]{2,4}))"
+
+email_adress <- stringr::str_extract_all(d$address, email_pattern, simplify = TRUE)
+
+data_allpotential <- cbind(all_authors_colum, email_adress)
+# Export data_all_potential
+write.csv(data_allpotential, file=paste(di, "/data/output/lista_authors_mails_wos.csv", sep=""), row.names = FALSE)
+
+
+## Generate a list of unique mails
+lista_emails <- stringr::str_extract_all(d$address, email_pattern, simplify = TRUE)
+
+# Create a dataframe with the unique emails
+library("reshape2")
+melt_emails <- melt(lista_emails, na.rm=TRUE)
+lista_emails_unicos <- as.data.frame(unique(melt_emails$value))
+names(lista_emails_unicos)[1] <- 'email'
+
+# Export 
+write.csv(lista_emails_unicos, file=paste(di, "/data/output/lista_emails_wos.csv", sep=""), row.names = FALSE)
+```
+ 
