--- a/analysis/cleaning_data.Rmd
+++ b/analysis/cleaning_data.Rmd
@@ -43,6 +43,10 @@ for (j in files){
   }
 
 rawdf <- rbind(bioCI, bioP, med, wos1, wos2, zoo)
+
+# Export auxiliar data with desired fields 
+aux_export <- rawdf[,c("Authors..Primary","Title.Primary", "Pub.Year")]
+write.csv(aux_export, file=paste(di, "/data/output/raw_wos_auxiliar1.csv", sep=""), row.names = FALSE)
 ```
 
 
