--- a/analysis/cleaning_data.Rmd
+++ b/analysis/cleaning_data.Rmd
@@ -13,7 +13,7 @@ output:
 #---------------------------------
 # Set working directory 
 machine <- "/Users/ajpelu"
-machine <- "/Users/ajpeluLap"
+# machine <- "/Users/ajpeluLap"
 
 di <- paste(machine, "/Dropbox/Review_Sierra_Nevada/sngc_review", sep = "")
 #---------------------------------
@@ -42,14 +42,31 @@ for (j in files){
   assign(name_aux, aux)
   }
 
-rawdf <- rbind(bioCI, bioP, med, wos1, wos2, zoo)
+
+rawdf <- rbind(bioCI, bioP, med, wos1, wos2, zoo, wos3)
 
 # Export auxiliar data with desired fields 
-aux_export <- rawdf[,c("Authors..Primary","Title.Primary", "Pub.Year")]
-write.csv(aux_export, file=paste(di, "/data/output/raw_wos_auxiliar1.csv", sep=""), row.names = FALSE)
+# aux_export <- rawdf[,c("Authors..Primary","Title.Primary", "Pub.Year")]
+# write.table(aux_export, file=paste(di, "/data/output/raw_wos_auxiliar1.txt", sep=""), sep="\t", row.names = FALSE)
+```
+
+```{r}
+# Create key 
+# Sort by year (ascending) and by Authors..Primary (alphabetically)
+rawdf <- rawdf %>% 
+  mutate(aut = as.character(Authors..Primary)) %>% # Transform factor to character 
+  arrange(Pub.Year, aut) %>% # sort by pubyear and author 
+  mutate(key=cumsum(rep(1, n()))) # create key 
+
+# Export selected fields
+aux <- rawdf %>% 
+  select(key, Authors..Primary, Title.Primary, Pub.Year, Periodical.Full, Periodical.Abbrev, Keywords)
+
+write.table(aux, file=paste(di, "/data/output/raw_wos_with_key.txt", sep=""), sep="\t", row.names = FALSE)
 ```
 
 
+```{r}
 ### Create several subsets
 
 First we want to create a table with the authors and the corresponding author. 
