--- a/text/methods.Rmd
+++ b/text/methods.Rmd
@@ -22,6 +22,7 @@ You can also embed plots, for example:
 
 ```{r, echo=FALSE}
 plot(cars)
+abline(lm(cars$speed~cars$dist))
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
