--- a/text/methods.Rmd
+++ b/text/methods.Rmd
@@ -21,8 +21,8 @@ summary(cars)
 You can also embed plots, for example:
 
 ```{r, echo=FALSE}
-plot(cars)
-abline(lm(cars$speed~cars$dist))
+plot(cars, pch=19, col="red")
+abline(lm(cars$dist~cars$speed), col="blue")
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
