--- a/text/methods.Rmd
+++ b/text/methods.Rmd
@@ -11,6 +11,8 @@ csl: journal_of_ecology.csl
 # WoS Search
 
 
+# Section 2
+
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
