--- a/text/methods.Rmd
+++ b/text/methods.Rmd
@@ -13,6 +13,9 @@ csl: journal_of_ecology.csl
 
 # Section 2
 
+# Section 3
+
+
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
