--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -13,8 +13,9 @@ output: html_document
 
 ## Georeferencing
 
-- Spatial aspect: decide criteria for the georeferencing: 
-    > See "Sampling References" tab in "AA Papers"
+- Spatial aspect: 
+    Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers"
+    Start georeferencing in GIS
     
 - Temporal aspect
 
@@ -29,23 +30,3 @@ Basically the conflict here is to decide what is considered for the study. For e
 # Survey
 
 - Bff...
-
-
-
---- 
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r}
-summary(cars)
-```
-
-You can also embed plots, for example:
-
-```{r, echo=FALSE}
-plot(cars)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
