--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -6,20 +6,28 @@ output: html_document
 # Literature Review
 
 ## Basic Incidences
-- Incoherences in Title
-- Incoherences in author
+- Incoherences in Title (i.e. title not as it appears in the paper, differences between tables, languages...) 
+- Incoherences in author (i.e. author not as it appears in the paper, differences between tables...)
 - Avoiding duplicates
-- Pdfs lacking?
+- Pdfs lacking: we do not have access to of 338 papers (out of 1038), based on UGR permits in WoS and google scholar. What do we do with these references?
+- Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
+
+## Methods
+
+To which level of detail? Export process, documentation,...
 
 ## Georeferencing
 
 - Spatial aspect: 
-    Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers"
+    Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
     Start georeferencing in GIS
     
 - Temporal aspect
 
 Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...
+
+Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
+  **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
 
 ## Data Mining
 
@@ -29,4 +37,9 @@ Basically the conflict here is to decide what is considered for the study. For e
 
 # Survey
 
-- Bff...
+- Answers analysis: what do we want to extract from the answers?
+  Main topics
+  Time of research
+  Publications: used for control with WoS search 
+      - Do we consider non per-reviewed publications? In that case, caution should prevail since researchers were actually asked for "scientific publications"
+  Problems
