--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -5,38 +5,79 @@ output: html_document
 
 # Literature Review
 
-## Basic Incidences
-- Incoherences in Title (i.e. title not as it appears in the paper, differences between tables, languages...) 
-- Incoherences in author (i.e. author not as it appears in the paper, differences between tables...)
-- Avoiding duplicates
-- Pdfs lacking: we do not have access to of 338 papers (out of 1038), based on UGR permits in WoS and google scholar. What do we do with these references?
-- Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
+:white_check_mark: ## Definir flujo de trabajo, esquema yed o similar - en Dropbox
+~~## Leer artículos similares~~ ver Google doc para verlos
+~~## Definir criterio de búsqueda~~
+    Time-span: 1970-2016
+    Query: TS=(Sierra Nevada* AND (Spain* OR España*))
+    Comprobar número y relevancia de publicaciones anteriores a 1970 (Regino): Documentado en “Search in WoS”
+:white_check_mark: Resolver basic Incidences
+    - Incoherences in Title (i.e. title not as it appears in the paper, differences between tables, languages...) - Incoherences in author (i.e. author not as it appears in the paper, differences between tables...)
+    - Avoiding duplicates
+    - Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
 
-## Methods
+:white_check_mark: Estadísticas básicas
+:white_check_mark: Integración en Refbase 
+  - Manejo de la herramienta
+  - Crear cuenta 
+  - Crear diccionario de etiquetas
+  - Utilizar Envthes o algún vocabulario controlado?
 
-To which level of detail? Export process, documentation,...
+:red_circle: Descarga de pdf: Faltan bastantes, sobre todo por problemas con el acceso/permiso
 
-## Georeferencing
+## Controles
+~~- Control interno~~
+- Nuestra BD vs WoS
+- Encuesta vs WoS
+- Referencias en artículos descargados
 
+## Espacialización de la información generada
+- Aprender a manejar información espacial QGIS http://www.qgis.org/es/site/ 
+- Base de datos PostgreSQL-PostGIS 
+- Georeferenciar para cada trabajo su localización
 - Spatial aspect: 
     Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
     Start georeferencing in GIS
     
 - Temporal aspect
-
 Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...
 
 Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
   **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
 
+:white_check_mark: Creación de un base de datos que conecte información espacial, refbase, campos nuevos (etiquetas, etc, etc): BD creada en Access para uso preliminar
+
 ## Data Mining
+:white_check_mark: Learning data mining, exploring package, text mining visualization, VOSviewer or alternatives (Plotly+Rshiny)...
+:white_check_mark: Table Areas_x_Journal: necesaria para el análisis por campo. Lista de categorías aquí: http://incites.isiknowledge.com/common/help/h_field_category_wos.html#
+    Journal Citation Reports permite descargar un archivo con todos los journal de cada categoría (1 archivo/categoría), así como archivos con los journal, pero sólo te permite 500 registros por archivo
 
-- Learning data mining, exploring package, text mining visualization, VOSviewer or alternatives (Plotly+Rshiny)...
-- Table Areas_x_Journal
-- Define topics for expert criteria analysis: hierarchical vs "key words", both cases,...
+:white_check_mark: Define topics for expert criteria analysis: hierarchical vs "key words", both cases,...
 
+Algunos recursos interesantes en R:
+An introduction to text mining in R. R News, 8(2):19–22, Oct. 2008. URL http://CRAN.R-project. org/doc/Rnews/.
+paquetes: 
+koRpus 
+tm 
+vignettes:
+http://handsondatascience.com/TextMiningO.pdf 
+https://rstudio-pubs-static.s3.amazonaws.com/31867_8236987cf0a8444e962ccd2aec46d9c3.html 
+http://www.cs.ukzn.ac.za/~murrellh/dm/content/slides10.pdf 
+
+Algunas notas sobre Data Mining: 
+Term frequency and association analyses are simple but widely used methods in text mining because the results are relatively simple to calculate and interpret (Namey et al., 2007: 141; Ryan and Bernard, 2000: 776).
+
+Ver a este amigacho http://faculty.washington.edu/bmarwick/publications/ 
+
+Notas sobre visualización: bibliometric tools, text mining visualization,...
+VOSviewer es una herramienta Java que permite hacer clusters/ontologías basados en relaciones:
+Buscar manual
+Qué necesita/usa para establecer relaciones?
+Investigar alternativas abiertas: shiny, R+plotly...
+
+## Writing methods: To which level of detail? Export process, documentation,...
 # Survey
-
+~~Hacer y enviar encuesta~~
 - Answers analysis: what do we want to extract from the answers?
   Main topics
   Time of research
