--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -7,53 +7,77 @@ output: html_document
 
 :white_large_square: Definir flujo de trabajo, esquema yed o similar - en Dropbox
 
-~~## Leer artículos similares~~ ver Google doc para verlos
+~~ Leer artículos similares~~ ver Google doc para verlos
 
-~~## Definir criterio de búsqueda~~
+~~ Definir criterio de búsqueda~~
     Time-span: 1970-2016
     Query: TS=(Sierra Nevada* AND (Spain* OR España*))
     Comprobar número y relevancia de publicaciones anteriores a 1970 (Regino): Documentado en “Search in WoS”
 
 :white_large_square: Resolver basic Incidences
-    - Incoherences in Title (i.e. title not as it appears in the paper, differences between tables, languages...) - Incoherences in author (i.e. author not as it appears in the paper, differences between tables...)
+
+    - Incoherences in Title (i.e. title not as it appears in the paper, differences between tables, languages...) 
+    
+    - Incoherences in author (i.e. author not as it appears in the paper, differences between tables...)
+    
     - Avoiding duplicates
+    
     - Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
 
 :white_large_square: Estadísticas básicas
 
 :white_large_square: Integración en Refbase 
+
   - Manejo de la herramienta
+
   - Crear cuenta 
+
   - Crear diccionario de etiquetas
+
   - Utilizar Envthes o algún vocabulario controlado?
 
 :red_circle: Descarga de pdf: Faltan bastantes, sobre todo por problemas con el acceso/permiso
 
 ## Controles
+
 - ~~Control interno~~
+
 - Nuestra BD vs WoS
+
 - Encuesta vs WoS
+
 - Referencias en artículos descargados
 
 :white_large_square: Espacialización de la información generada
+
 - Aprender a manejar información espacial QGIS http://www.qgis.org/es/site/ 
+
 - Base de datos PostgreSQL-PostGIS 
+
 - Georeferenciar para cada trabajo su localización
+
 - Spatial aspect: 
+
     Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
+
     Start georeferencing in GIS
-    
+
 - Temporal aspect
+
 Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...
 
 Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
+
   **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
 
 :white_large_square: Creación de un base de datos que conecte información espacial, refbase, campos nuevos (etiquetas, etc, etc): BD creada en Access para uso preliminar
 
 :white_large_square: Data Mining
+
 :white_large_square: Learning data mining, exploring package, text mining visualization, VOSviewer or alternatives (Plotly+Rshiny)...
+
 :white_large_square: Table Areas_x_Journal: necesaria para el análisis por campo. Lista de categorías aquí: http://incites.isiknowledge.com/common/help/h_field_category_wos.html#
+
     Journal Citation Reports permite descargar un archivo con todos los journal de cada categoría (1 archivo/categoría), así como archivos con los journal, pero sólo te permite 500 registros por archivo
 
 :white_large_square: Define topics for expert criteria analysis: hierarchical vs "key words", both cases,...
@@ -61,8 +85,10 @@ Regino's recommendations: include in the database literally what authors say in 
 Algunos recursos interesantes en R:
 An introduction to text mining in R. R News, 8(2):19–22, Oct. 2008. URL http://CRAN.R-project. org/doc/Rnews/.
 paquetes: 
-koRpus 
-tm 
+- koRpus: útil para el análisis de frecuencias
+- tm 
+Algún test hecho para estos paquetes, en "/analysis/Frequency_analysis"
+
 vignettes:
 http://handsondatascience.com/TextMiningO.pdf 
 https://rstudio-pubs-static.s3.amazonaws.com/31867_8236987cf0a8444e962ccd2aec46d9c3.html 
@@ -83,10 +109,13 @@ Investigar alternativas abiertas: shiny, R+plotly...
 
 
 :white_large_square: Survey
+
 - ~~Hacer y enviar encuesta~~
+
 - Answers analysis: what do we want to extract from the answers?
   Main topics
   Time of research
   Publications: used for control with WoS search 
+  
       - Do we consider non per-reviewed publications? In that case, caution should prevail since researchers were actually asked for "scientific publications"
   Problems
