--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -7,12 +7,11 @@ output: html_document
 
 :white_large_square: Definir flujo de trabajo, esquema yed o similar - en Dropbox
 
-~~ Leer artículos similares~~ ver Google doc para verlos
+~~Leer artículos similares~~ ver Google doc para verlos
 
-~~ Definir criterio de búsqueda~~
-    Time-span: 1970-2016
-    Query: TS=(Sierra Nevada* AND (Spain* OR España*))
-    Comprobar número y relevancia de publicaciones anteriores a 1970 (Regino): Documentado en “Search in WoS”
+~~Definir criterio de búsqueda (Time-span: 1970-2016, Query: TS=(Sierra Nevada* AND (Spain* OR España*))~~
+
+:wavy_dash: Comprobar número y relevancia de publicaciones anteriores a 1970 (Regino): Documentado en “Search in WoS”
 
 :white_large_square: Resolver basic Incidences
 
@@ -24,19 +23,21 @@ output: html_document
     
     - Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
 
-:white_large_square: Estadísticas básicas
+:white_large_square: Estadísticas básicas - cuales? Markdown "Basic Statistics" en la carpeta "Analysis"
+
+:white_large_square: Creación de un base de datos que conecte información espacial, refbase, campos nuevos (etiquetas, etc, etc): BD creada en Access para uso preliminar. 
+
+:red_circle: Descarga de pdf: Faltan bastantes, sobre todo por problemas con el acceso/permiso
 
 :white_large_square: Integración en Refbase 
 
   - Manejo de la herramienta
 
-  - Crear cuenta 
+  ~~-Crear cuenta~~
 
   - Crear diccionario de etiquetas
 
   - Utilizar Envthes o algún vocabulario controlado?
-
-:red_circle: Descarga de pdf: Faltan bastantes, sobre todo por problemas con el acceso/permiso
 
 ## Controles
 
@@ -46,39 +47,44 @@ output: html_document
 
 - Encuesta vs WoS
 
-- Referencias en artículos descargados
+## Georeferenciación
+
+:wavy_dash: Anotar referencias en artículos descargados
+
+:red_circle: Definir criterios de referenciación
+
+See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
+
+Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
+
+  **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
+  
+:white_large_square: Sistematizar anotaciones sobre referencia espacial en una tabla/BD con: id (key?), coordenadas y tipo de vector (punto, línea, polígono) - Base de datos PostgreSQL-PostGIS
+
+:wavy_dash: Aprender a manejar información espacial QGIS http://www.qgis.org/es/site/ IN PROCESS
+
+:white_large_square: Preparar qGIS: mapa de SN
 
 :white_large_square: Espacialización de la información generada
-
-- Aprender a manejar información espacial QGIS http://www.qgis.org/es/site/ 
-
-- Base de datos PostgreSQL-PostGIS 
-
-- Georeferenciar para cada trabajo su localización
-
-- Spatial aspect: 
-
-    Decide criteria for the georeferencing: See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
-
-    Start georeferencing in GIS
 
 - Temporal aspect
 
 Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...
 
-Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
-
-  **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
-
-:white_large_square: Creación de un base de datos que conecte información espacial, refbase, campos nuevos (etiquetas, etc, etc): BD creada en Access para uso preliminar
-
-:white_large_square: Data Mining
+## Data Mining
 
 :white_large_square: Learning data mining, exploring package, text mining visualization, VOSviewer or alternatives (Plotly+Rshiny)...
 
-:white_large_square: Table Areas_x_Journal: necesaria para el análisis por campo. Lista de categorías aquí: http://incites.isiknowledge.com/common/help/h_field_category_wos.html#
+:wavy_dash: Table Areas_x_Journal: 
 
-    Journal Citation Reports permite descargar un archivo con todos los journal de cada categoría (1 archivo/categoría), así como archivos con los journal, pero sólo te permite 500 registros por archivo
+  :heavy_check_mark: Categories list
+  
+  :heavy_check_mark: Journal list per science category
+  
+  :heavy_check_mark: Journal list per social science category
+  
+  :white_large_square: build database relating Categories & Journals: started, need to transform the Journal lists to be able to include them
+
 
 :white_large_square: Define topics for expert criteria analysis: hierarchical vs "key words", both cases,...
 
@@ -108,11 +114,11 @@ Investigar alternativas abiertas: shiny, R+plotly...
 :white_large_square: Writing methods: To which level of detail? Export process, documentation,...
 
 
-:white_large_square: Survey
+# Survey
 
 - ~~Hacer y enviar encuesta~~
 
-- Answers analysis: what do we want to extract from the answers?
+:white_large_square: Answers analysis: what do we want to extract from the answers?
   Main topics
   Time of research
   Publications: used for control with WoS search 
