--- a/To Do List.Rmd
+++ b/To Do List.Rmd
@@ -23,7 +23,7 @@ output: html_document
     
     - Languages: some references are in a different language than english and spanish (german and french). Do we consider them? How to avoid duplicates due to translations? Consider that some papers may have parts of them in an accepted language, but not the whole text, or the other way around (i.e. they may appear with english title in WoS even though the paper was published in a different language)
 
-:white_large_square: Estadísticas básicas - cuales? Markdown "Basic Statistics" en la carpeta "Analysis"
+:white_large_square: Estadísticas básicas - cuales? Markdown "Basic Statistics" en la carpeta "Analysis". En conjunto a los datos obtenidos en la encuesta, así como las BD ya existentes.
 
 :white_large_square: Creación de un base de datos que conecte información espacial, refbase, campos nuevos (etiquetas, etc, etc): BD creada en Access para uso preliminar. 
 
@@ -49,19 +49,22 @@ output: html_document
 
 ## Georeferenciación
 
-:wavy_dash: Anotar referencias en artículos descargados
+~~Anotar referencias en artículos descargados~~
 
-:red_circle: Definir criterios de referenciación
+~~Definir criterios de referenciación~~
 
 See "Sampling References" tab in "AA Papers", and consider also models, geological settings, species&taxonomy based on collections, herbaria,...
 
 Regino's recommendations: include in the database literally what authors say in their paper, if possible just copy pasta what it is said in the methodology. 
 
   **Note**: careful with sensitive species and how to treat data related to them, make sure what international law and the Park says about what can be openly public and what needs to be limited accesible (by experts for example).
-  
-:white_large_square: Sistematizar anotaciones sobre referencia espacial en una tabla/BD con: id (key?), coordenadas y tipo de vector (punto, línea, polígono) - Base de datos PostgreSQL-PostGIS
 
-:wavy_dash: Aprender a manejar información espacial QGIS http://www.qgis.org/es/site/ IN PROCESS
+Decisión: anotar aquellos que tienen las coordenadas geograficas, los demás se irán viendo según casuíatica. Ver anotaciones en cuaderno (Reunión 25/04/2016).
+
+:white_large_square: Sistematizar anotaciones sobre referencia espacial en una tabla/BD con: id (key?), coordenadas (y tipo de vector (punto, línea, polígono)), topónimo, incertidumbre... - Base de datos PostgreSQL-PostGIS
+
+~~Aprender a manejar información espacial QGIS~~
+http://www.qgis.org/es/site/ IN PROCESS
 
 :white_large_square: Preparar qGIS: mapa de SN
 
@@ -69,7 +72,9 @@ Regino's recommendations: include in the database literally what authors say in 
 
 - Temporal aspect
 
-Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...
+~~Basically the conflict here is to decide what is considered for the study. For example, if a sample is taken at a certain point in time and space, is it that what we include? It seems simple but the variety of spatial and temporal ranges studies makes it a bit more complex...~~ 
+
+Decisión: referir sólo al año de muestreo (y al rango temporal, si se quisiera). 
 
 ## Data Mining
 
@@ -125,3 +130,7 @@ Investigar alternativas abiertas: shiny, R+plotly...
   
       - Do we consider non per-reviewed publications? In that case, caution should prevail since researchers were actually asked for "scientific publications"
   Problems
+  
+:white_large_square: Merge with Search, to integrate together authors, topics, as control of the search
+  
+:white_large_square: Contestar correos Tinaut, Noriega...
